# clipboardwaita

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  meson.build
data/: com.github.digitalone1.clipboardwaita.desktop  com.github.digitalone1.clipboardwaita.gschema.xml  com.github.digitalone1.clipboardwaita.xml  meson.build
src/: app_window.ui  app_window_ui.cpp  app_window_ui.hpp  cbwaita_app.cpp  cbwaita_app.hpp  clipboard_item_holder.cpp  clipboard_item_holder.hpp  clipboard_item_row.cpp  clipboard_item_row.hpp  clipboard_list_manager.cpp  clipboard_list_manager.hpp  clipboard_list_row.ui  clipboard_watcher.cpp  clipboard_watcher.hpp  clipboardwaita.gresource.xml  edit_item_dialog.cpp  edit_item_dialog.hpp  edit_item_dialog.ui  main.cpp  meson.build  preferences_dialog.cpp  preferences_dialog.hpp  preferences_dialog.ui  shortcuts-dialog.ui  util.cpp  util.hpp  wrapping_toast.cpp  wrapping_toast.hpp  wrapping_toast.ui
